--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poet-feed-consumer",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "",
   "main": "dist/FeedConsumer.js",
   "types": "dist/FeedConsumer.d.ts",
@@ -16,8 +16,6 @@
     "@types/isomorphic-fetch": "0.0.34",
     "@types/node": "^7.0.31",
     "@types/xml2js": "0.0.32",
-    "bitcore-explorers": "eordano/bitcore-explorers",
-    "bitcore-lib": "eordano/bitcore-lib#f9c9876",
     "bluebird": "^3.4.7",
     "create-torrent": "^3.28.0",
     "isomorphic-fetch": "^2.2.1",
@@ -27,6 +25,10 @@
     "prompt": "^1.0.0",
     "protobufjs": "=6.6.3",
     "xml2js": "^0.4.17"
+  },
+  "peerDependencies": {
+    "bitcore-explorers": "eordano/bitcore-explorers",
+    "bitcore-lib": "eordano/bitcore-lib#f9c9876"
   },
   "repository": {
     "type": "git",
